Closed
Bug 673240
Opened 14 years ago
Closed 14 years ago
Thunderbird crashes when opening IMAP Account mail with MoreFunctionsForAddressBook addon [@ morkTable::HasRow] | [[@ nsAddrDatabase::HasRowButDeletedForCharColumn] (Mac & linux)
Categories
(MailNews Core :: Address Book, defect)
Tracking
(thunderbird6 fixed, thunderbird7 fixed, seamonkey2.3 fixed, seamonkey2.4 fixed)
RESOLVED
FIXED
Thunderbird 8.0
People
(Reporter: michael, Assigned: m_kato)
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
|
823 bytes,
patch
|
Bienvenu
:
review+
standard8
:
approval-comm-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_0) AppleWebKit/534.30 (KHTML, like Gecko) Chrome/12.0.742.122 Safari/534.30
Steps to reproduce:
Since Update to Lion 10.7 TB crashes when clicking on a email from one account. It only happens with this account. Even with other accounts on the same server this problem does not occur. I already deleted and re-created the account. I also tried to delete the panacea.dat from the profile folder and all the email for this account from the ImapMail Folder (and recreated the account again).
Comment 1•14 years ago
|
||
michael, with 10.6 and same Thunderbird profile, you did not crash?
Please get a crash report ID per http://support.mozillamessaging.com/en-US/kb/Mozilla+Crash+Reporter#Viewing_crash_reports and if that is not possible, then ...
Run /Applications/Utilities/Console.app. Expand "~/Library/Logs" and "CrashReporter", then look for logs for "thunderbird-bin". Please post the top of that file, _stopping_ at 20th line of the crashing thread number (Find number where you see the text, "crashing thread")
Also, does it crash if started in safe mode?
http://support.mozillamessaging.com/en-US/kb/safe-mode
If no crash in safe mode, then the problem is likely to be an add-on.
Hi Wayne, yes with 10.6. I had worked with this email box without any problems.
Here are the bug-report IDs:
bp-d722b05b-593e-4644-b358-050a52110721 21.07.11 23:20
bp-7f7fc57d-0ad0-4a27-a4bd-78e382110721 21.07.11 23:17
bp-308741f4-559f-47c6-abbd-6989c2110721 21.07.11 22:53
bp-2780f0a0-dc01-40d1-b672-a7bb62110721 21.07.11 22:44
bp-c7204dc7-4dbb-4d5b-aa56-f75622110721 21.07.11 17:16
bp-25c1223f-a7b6-4330-a8a5-112d82110721 21.07.11 16:16
bp-022146e3-7661-4f5d-8335-63b712110721 21.07.11 16:12
bp-c97f6ff1-2ab9-4002-9cef-80c972110721 21.07.11 16:11
bp-391e938a-cf6d-4c48-a6d9-b3ccb2110721 21.07.11 16:00
bp-8a6df4bc-e50d-4a01-84a9-b2d3a2110721 21.07.11 16:00
bp-728a645b-f576-4e19-9bac-e17352110721 21.07.11 15:57
bp-ea4939b0-d5a2-4f0d-8c89-813da2110720 20.07.11 20:17
Comment 3•14 years ago
|
||
Thanks for the crash reports. most or all are @ morkTable::HasRow
for mac and linux, it doesn't exist prior to TB3.1.11 except for one 3.1.10 crash. => regression
bp-d722b05b-593e-4644-b358-050a52110721
EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
0x48
0 XUL morkTable::HasRow db/mork/src/morkTable.cpp:678
1 XUL nsAddrDatabase::HasRowButDeletedForCharColumn mailnews/addrbook/src/nsAddrDatabase.cpp:3302
2 XUL nsAddrDatabase::GetRowForCharColumn mailnews/addrbook/src/nsAddrDatabase.cpp:3348
3 XUL nsAddrDatabase::GetRowFromAttribute mailnews/addrbook/src/nsAddrDatabase.cpp:3146
4 XUL nsAddrDatabase::GetCardFromAttribute mailnews/addrbook/src/nsAddrDatabase.cpp:3159
5 XUL NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/unix/xptcinvoke_x86_64_unix.cpp:195
6 XUL XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:3139
7 XUL XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1610
8 XUL js::Interpret js/src/jscntxtinlines.h:698
9 XUL js::RunScript js/src/jsinterp.cpp:646
10 XUL js::Invoke js/src/jsinterp.cpp:726
for windows, there is a signature which does exist prior to 3.1.11, but eprhaps a strong uptick starting at 3.1.11
morkTable::HasRow(nsIMdbEnv*, nsIMdbRow*, unsigned char*)
bp-b6d79ff3-a403-42b1-9d3d-41c0a2110720 v5.0
bp-7409dd9c-63fb-4ed8-8f7a-4253a2110719 v5.0 "Writing a mail !!!
0 xul.dll morkTable::HasRow db/mork/src/morkTable.cpp:679
1 xul.dll nsAddrDatabase::HasRowButDeletedForCharColumn mailnews/addrbook/src/nsAddrDatabase.cpp:3302
2 xul.dll nsAddrDatabase::GetRowForCharColumn mailnews/addrbook/src/nsAddrDatabase.cpp:3348
3 xul.dll nsAddrDatabase::GetRowFromAttribute mailnews/addrbook/src/nsAddrDatabase.cpp:3146
4 xul.dll nsAddrDatabase::GetCardFromAttribute mailnews/addrbook/src/nsAddrDatabase.cpp:3160
5 xul.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
6 xul.dll XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2369
https://crash-stats.mozilla.com/report/list?product=Thunderbird&query_search=signature&query_type=exact&query=morkTable%3A%3AHasRow%28nsIMdbEnv*%2C%20nsIMdbRow*%2C%20unsigned%20char*%29&reason_type=contains&date=3%2F21%2F2011%2016%3A38%3A02&range_value=16&range_unit=weeks&hang_type=any&process_type=any&do_query=1&admin=1&signature=morkTable%3A%3AHasRow%28nsIMdbEnv*%2C%20nsIMdbRow*%2C%20unsigned%20char*%29
7409dd9c-63fb-4ed8-8f7a-4253a2110719
Status: UNCONFIRMED → NEW
Crash Signature: [@ morkTable::HasRow]
[@ morkTable::HasRow(nsIMdbEnv*, nsIMdbRow*, unsigned char*)]
Component: General → Address Book
Ever confirmed: true
Keywords: stackwanted → regression
OS: Mac OS X → All
Product: Thunderbird → MailNews Core
QA Contact: general → address-book
Summary: Thunderbird crashes when opening IMAP Account mail → Thunderbird crashes when opening IMAP Account mail [@ morkTable::HasRow] | [[@ nsAddrDatabase::HasRowButDeletedForCharColumn] (Mac & linux)
Comment 4•14 years ago
|
||
related to Bug 526047? crash [@ nsAddrDatabase::GetRowForCharColumn(unsigned short const*, unsigned int, int, int, nsIMdbRow**)]
re: comment 3, I don't see anything obvious in 3.0.10 or 3.0.11 that might trigger regression
https://bugzilla.mozilla.org/buglist.cgi?field0-0-0=cf_status_thunderbird31&query_format=advanced&type0-0-0=equals&value0-0-0=.11-fixed&list_id=834054
https://bugzilla.mozilla.org/buglist.cgi?field0-0-0=cf_status_thunderbird31&query_format=advanced&type0-0-0=equals&value0-0-0=.10-fixed&list_id=834057
michael, do you have multiple accounts, and is it just one account that crashes?
Yes, I have multiple IMAP Accounts in my Thunderbird, even using the same IMAP Server, but this only happens with this Account.
Is there a way to delete all the data/settings for this account and start again - without the crashes - or would this require the whole profile to be deleted?
Comment 7•14 years ago
|
||
Yes, it would be one of your address books, the files with the .mab extension in your profile directory - you could try moving them out one at a time until the crash stops happening. Once you find which one is causing the problem, we would be happy to look at it.
I found it was abook-1.mab. I've now moved the file. How can I "repair" this file?
If I would share the file with you, all my addresses would be readable to you, or am I wrong?
Comment 9•14 years ago
|
||
(In reply to comment #8)
> I found it was abook-1.mab. I've now moved the file. How can I "repair" this
> file?
if I can't see it, I can't know how to repair it.
> If I would share the file with you, all my addresses would be readable to
> you, or am I wrong?
Yes. If you e-mail it to me (or whoever wants to work on the bug), it would be just that person that could see the contents, and I don't have to look at the contents to fix the crash. I just need to run with that address book in a profile and look at the crash in the debugger. But it's completely up to you.
Comment 10•14 years ago
|
||
Ah, I didn't realize it was only clicking on a particular message that caused the crash. Can you send me the headers of the message that causes the crash? (you can save as .eml file and then just copy the headers into a text file)
| Reporter | ||
Comment 11•14 years ago
|
||
It was not only when clicking on one message in the box, it was when clicking on any message. Will try the steps you sent me by mail tonight or tomorrow and let you know.
Comment 12•14 years ago
|
||
Have you tried running TB in safe-mode? Do you have any extensions installed? I don't see any js code in TB calling GetCardFromAttribute, which makes me think either an extension is doing that, or that stack trace is bad.
Comment 13•14 years ago
|
||
I tried this on the mac as well, and didn't have a problem.
Comment 14•14 years ago
|
||
90% of the crashes seem to be happening to users who have the moreFunctionsForAddressBook extension installed (which also contains the moreCols extension, from what I can tell). I tried installing that extension, but it didn't make me crash.
| Reporter | ||
Comment 15•14 years ago
|
||
I have now copied the address book file back to my profile folder. When I open "Address Book" from the menu bar, I can click through every address book without TB crashing.
I also use MoreFunctionsForAddressBook.
Very confusing for me is that there is no Address Book missing when I delete the abook-1.mab from my profile folder, when I look into that folder, TB seems to have recreated the file:
michael$ rm abook-1.mab
open TB
michael$ ls -la *.mab
-rw-r--r--@ 1 michael staff 316482 26 Jul 10:54 abook-1.mab
-rw-r--r--@ 1 michael staff 44622 7 Jul 17:30 abook-2.mab
-rwxr-xr-x 1 michael staff 139555 26 Jul 10:26 abook.mab
-rwxr-xr-x 1 michael staff 100090 26 Jul 10:31 history.mab
-rwxr-xr-x 1 michael staff 39915 13 Feb 15:13 impab-1.mab
| Reporter | ||
Comment 16•14 years ago
|
||
So as I do not have this problem anymore and not missing the address book, this issue seems solved to me. OK?
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → WORKSFORME
| Assignee | ||
Comment 17•14 years ago
|
||
If m_mdbStore->FindRow is failed, this crash occurs.
| Assignee | ||
Comment 18•14 years ago
|
||
Wayne, is this top crash issue? If so, I can fix this although this root cause may be corruption issue of address book.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
| Assignee | ||
Comment 19•14 years ago
|
||
| Assignee | ||
Updated•14 years ago
|
Attachment #548397 -
Flags: review?(dbienvenu)
| Reporter | ||
Comment 20•14 years ago
|
||
I just want to add that I'm using a plugin that syncs my addressbooks with Google. Maybe this is the cause that when I delete the corrupt address book file it is automatically recreated when I open TB the next time.
Comment 21•14 years ago
|
||
yes, it is a topcrash - #6 for TB5. Thanks for the patch! Too late for v6, but we should take this for v7.
agree with comment 14, most have MoreFunctionsForAddressBook installed. perhaps someone should contact the author.
Keywords: topcrash
Summary: Thunderbird crashes when opening IMAP Account mail [@ morkTable::HasRow] | [[@ nsAddrDatabase::HasRowButDeletedForCharColumn] (Mac & linux) → Thunderbird crashes when opening IMAP Account mail with MoreFunctionsForAddressBook addon [@ morkTable::HasRow] | [[@ nsAddrDatabase::HasRowButDeletedForCharColumn] (Mac & linux)
Comment 22•14 years ago
|
||
Comment on attachment 548397 [details] [diff] [review]
fix
Thx for the patch. I'm not convinced that this is what's failing, but it was something I was planning on doing, so r=me.
Attachment #548397 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Comment 23•14 years ago
|
||
Assignee: nobody → m_kato
Status: REOPENED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 8.0
| Assignee | ||
Comment 24•14 years ago
|
||
Comment on attachment 548397 [details] [diff] [review]
fix
This is top crasher issue of Thunderbird 5.
Attachment #548397 -
Flags: approval-comm-beta?
Attachment #548397 -
Flags: approval-comm-aurora?
Updated•14 years ago
|
Attachment #548397 -
Flags: approval-comm-beta?
Attachment #548397 -
Flags: approval-comm-beta+
Attachment #548397 -
Flags: approval-comm-aurora?
Attachment #548397 -
Flags: approval-comm-aurora+
Comment 25•14 years ago
|
||
Checked into aurora: http://hg.mozilla.org/releases/comm-aurora/rev/5e7da8cde985
status-thunderbird7:
--- → fixed
Comment 26•14 years ago
|
||
Checked into beta: http://hg.mozilla.org/releases/comm-beta/rev/4463a1ea42bf
status-thunderbird6:
--- → fixed
Updated•14 years ago
|
status-seamonkey2.3:
--- → fixed
status-seamonkey2.4:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•