Bug 673240 - Thunderbird crashes when opening IMAP Account mail with MoreFunctionsForAddressBook addon [@ morkTable::HasRow] | [[@ nsAddrDatabase::HasRowButDeletedForCharColumn] (Mac & linux). r=dbienvenu